Bug sur l'ajout des bombes